--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ a {
 
 .wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   padding: 15px;
   margin: 15px;
@@ -68,7 +69,7 @@ input.searchBtn {
   margin: 0;
   text-align: center;
   outline: none;
-  width: 120%;
+  /* width: 120%; */
   position: relative;
   left: -10px;
   top: 10px;
@@ -132,9 +133,10 @@ input.searchBtn {
   text-align: center;
 }
 
-@media screen and (max-width: 375px) {
+@media (max-width: 375px) {
   .containerr {
     display: flex;
+    width: 100%;
     padding: 15px;
     background-color: #222;
   }
@@ -162,6 +164,7 @@ input.searchBtn {
     position: relative;
     left: -10px;
     top: 10px;
+    /* width: 50%; */
     z-index: 2;
     border-radius: 4px;
     font-size: 25px;
