--- a/main.css
+++ b/main.css
@@ -150,6 +150,12 @@ input.searchBtn {
     background-color: #222;
   }
 
+  .displayField {
+    font-size: 1.5rem;
+    background-color: var(--main-gray);
+    text-align: center;
+  }
+
   .nav-band ul li a {
     color: #fff;
     text-decoration: none;
@@ -172,7 +178,6 @@ input.searchBtn {
     text-align: center;
     outline: none;
     position: relative;
-    left: -10px;
     top: 10px;
     /* width: 50%; */
     z-index: 2;
