--- a/main.css
+++ b/main.css
@@ -46,6 +46,7 @@ a {
   justify-content: space-around;
   padding: 15px;
   margin: 15px;
+  background-color: #01b4e4;
 }
 
 .wrap__1 {
@@ -64,6 +65,9 @@ input {
 .search_form {
   max-width: 400px;
   margin: 50px auto;
+  background-image:url(image/world.gif);
+  background-repeat: repeat-y;
+  background-position: center;
 }
 
 input.searchBtn {
