--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@ a {
   justify-content: space-around;
   padding: 15px;
   margin: 15px;
-  background-color: #01b4e4;
+  background-color: #928f8f;
 }
 
 .wrap__1 {
